# AMS

./: AMS.sln  AMS.vcxproj  CMakeLists.txt  README.md  config.xml  index.html  params.json
AMS/: AMS.pro  AMS_global.h  Helper.h  IService.cpp  IService.h  MsgObject.h  Types.h
AMS/Config/: Configurator.h  Parser.h
AMS/Discovery/: Aliveness.cpp  Aliveness.h  Discovery.cpp  Discovery.h  Heartbeat.h  IPeerNotification.h  ReceiverTask.cpp  ReceiverTask.h  SenderTask.cpp  SenderTask.h
AMS/Net/: Context.h  Message.h  Serializer.h  SingleMessage.h  Socket.cpp  Socket.h
AMS/PubSub/: IPubSub.h  PubSub.h
AMS/Reactor/: Dispatcher.h  IHandler.h  Poller.h  Worker.cpp  Worker.h
AMS_test/: AMS_test.pro  AMS_test.vcxproj  Main.cpp  TestMsg1.h  TestMsg2.h
